--- a/dev/pug/modules/foot/foot.pug
+++ b/dev/pug/modules/foot/foot.pug
@@ -1,2 +1,66 @@
 mixin foot()
   footer.foot
+    .container
+      .row
+        .foot__item.foot__item--f
+          .foot__logo: img(src="img/content/logo.png", alt="image")
+        .foot__item.foot__item--s
+          .foot__soc
+            a(href="#"): img(src="img/general/inst.png", alt="image")
+            a(href="#"): img(src="img/general/fc.png", alt="image")
+        .foot__item.foot__item--t
+          a.foot__police.popup-js(href="#police") Политика конфиденциальности
+        .foot__item.foot__item--fr
+          a.phone(href="tel:+380996514812") 
+            +svg('phone')
+            | +380 996-514-812
+          a.phone.foot--mail(href="mailto:vrzoneodessa@gmail.com") 
+            +svg('mail')
+            | vrzoneodessa@gmail.com
+              
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//- 
