--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -11,15 +11,15 @@ mixin header(name)
             .nav   
               ul.nav__list
                 li.nav__item.nav__item--active
-                  a.nav__link(href="#") Акция
+                  a.nav__link.easyscroll(href="#discount") Акция
                 li.nav__item
-                  a.nav__link(href="#") Игры
+                  a.nav__link.easyscroll(href="#video") Игры
                 li.nav__item
-                  a.nav__link(href="#") Цены
+                  a.nav__link.easyscroll(href="#pricing") Цены
                 li.nav__item
-                  a.nav__link(href="#") Забронировать
+                  a.nav__link.easyscroll(href="#pricing") Забронировать
                 li.nav__item
-                  a.nav__link(href="#") Контакты
+                  a.nav__link.easyscroll(href="#find") Контакты
           .universall-line__item
             a.phone(href="tel:+380996514812") 
               +svg('phone')
@@ -59,7 +59,7 @@ mixin header(name)
         .col
           .btn-block.btn-block--header
             .btn-wrap
-              a.btn(href="#") Забронировать время
+              a.btn.easyscroll(href="#pricing") Забронировать время
 
 
 
