--- a/dev/pug/pages/thanks.pug
+++ b/dev/pug/pages/thanks.pug
@@ -4,3 +4,64 @@ block head
   - var title = 'Спасибо за заявку'
   // meta(http-equiv='refresh', content= '3; URL=index.html')
 block content
+  header(class="header " + name)
+    .universall-line   
+      .container  
+        .row.row--universall
+          .universall-line__item 
+            .logo 
+              img(src="img/content/logo.png", alt="logo") 
+          .universall-line__item 
+            .nav   
+              ul.nav__list
+                li.nav__item.nav__item--active
+                  a.nav__link.easyscroll(href="#discount") Акция
+                li.nav__item
+                  a.nav__link.easyscroll(href="#video") Игры
+                li.nav__item
+                  a.nav__link.easyscroll(href="#pricing") Цены
+                li.nav__item
+                  a.nav__link.easyscroll(href="#pricing") Забронировать
+                li.nav__item
+                  a.nav__link.easyscroll(href="#find") Контакты
+          .universall-line__item
+            a.phone(href="tel:+380996514812") 
+              +svg('phone')
+              | +380 996-514-812
+            a.recall.popup-js(href="#recall") 
+              span Позвоните нам
+
+    .container
+      .row
+        .col
+          h1.h1.h1--top Клуб VR в Одессе 
+          .slogan 
+            span Спасибо за заявку
+          .subtitle Мы свяжемся с вами в ближайшее время
+        
+      //- .row
+        .col.col--header-block-row
+          .header-block.header-block--f
+            .header-block__title &gt; 25
+            .header-block__desc Захватывающих игр  на разные  тематики
+          .header-block.header-block--s
+            .header-block__title Сетевой режим
+            .header-block__desc С участием 4-х человек одновременно        
+      //- .row
+        .col.col--header-block-row2
+          .header-block.header-block--t
+            .header-block__title 
+              span НТС 
+              | vive
+            .header-block__desc Шлемы с полным погружением
+          .header-block.header-block--fr
+            .header-block__title Цена
+            .header-block__desc Самая низкая в городе
+
+      //- .row
+        .col
+          .btn-block.btn-block--header
+            .btn-wrap
+              a.btn.easyscroll(href="#pricing") Забронировать время
+
+
