--- a/dev/sass/media.sass
+++ b/dev/sass/media.sass
@@ -5,12 +5,14 @@
   /**/
   
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
-  /**/
+@media only screen and (max-width : 1850px)
+  .discount__man-img
+    display: none
 
 /* 1200 end */
-@media only screen and (max-width : 992px)
-	/**/
+@media only screen and (max-width : 1300px)
+  .count__arrow
+    display: none
 
 
 
