--- a/dev/pug/modules/foot/foot.sass
+++ b/dev/pug/modules/foot/foot.sass
@@ -1,23 +1,84 @@
 /* foot style */ 
+.foot
+  // margin-top: -100px
+  padding-top: 10px
+  padding-bottom: 30px
+  background: $def
+  color: #fff
+  // background: green
+  .phone
+    +sm-block()
+      justify-content: center
+
+
+  .row
+    align-items: center
+    +sm-block()
+      flex-direction: column
+.foot__top
+  font-size: 0
+  // background: red
+
+.foot__item
+  +col()
+
+.foot__item--f
+  +cols(2)
+  +cols-sm(12)
+  +sm-block()
+    margin-top: 25px
+    text-align: center
+.foot__item--s
+  +cols(2)
+  +cols-sm(12)
+  +sm-block()
+    margin-top: 25px
+    text-align: center
+.foot__item--t
+  +cols(4)
+  +cols-sm(12)
+  +sm-block()
+    margin-top: 25px
+    text-align: center
+  text-align: center
+.foot__item--fr
+  +cols(4)
+  +cols-sm(12)
+  +sm-block()
+    margin-top: 25px
+    text-align: center
+
+
+
+
+.foot__soc
+  font-size: 0
+  text-align: center
+  a
+    display: inline-block
+    margin: 0 10px
 
 
 
 
 
+.foot--mail
+  margin-top: 15px
+  font-size: 20px
+  font-weight: 300
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+.police 
+  position: relative
+  max-width: 800px
+  margin-left: auto
+  margin-right: auto
+  padding: 25px 20px
+  background: #fff
+  .h3
+    font-weight: bold
+    font-size: 22px
 
 
 
