--- a/dev/sass/smart-grid.sass
+++ b/dev/sass/smart-grid.sass
@@ -6,6 +6,7 @@ $break_md: 992px
 $break_sm: 768px
 $break_smx: 640px
 $break_xs: 576px
+$break_xsm: 420px
 $break_xxs: 380px
 
 $offset: 15px
@@ -14,6 +15,7 @@ $offset_md: $offset
 $offset_sm: $offset
 $offset_smx: $offset
 $offset_xs: $offset
+$offset_xsm: $offset
 $offset_xxs: $offset
 
 $offset_one_side: ($offset / 2)
@@ -22,6 +24,7 @@ $offset_md_one_side: ($offset_md / 2)
 $offset_sm_one_side: ($offset_sm / 2)
 $offset_smx_one_side: ($offset_smx / 2)
 $offset_xs_one_side: ($offset_xs / 2)
+$offset_xsm_one_side: ($offset_xsm / 2)
 $offset_xxs_one_side: ($offset_xxs / 2)
 
 $fields: 15px
@@ -94,6 +97,10 @@ $fields: 15px
 =cols-xs($n)
   $val: 100% / $columns * $n
   +xs(width, #{calc(#{$val} - #{$offset_xs})})
+
+=cols-xsm($n)
+  $val: 100% / $columns * $n
+  +xsm(width, #{calc(#{$val} - #{$offset_xsm})})
 
 =cols-xxs($n)
   $val: 100% / $columns * $n
@@ -255,6 +262,32 @@ $fields: 15px
   $val: 100% / $columns * $n
   +xs(padding-right, #{calc(#{$val} + #{$offset_xs_one_side})})
 
+=shift-xsm($n)
+  $val: 100% / $columns * $n
+  +xsm(margin-left, #{calc(#{$val} + #{$offset_xsm_one_side})})
+  +xsm(margin-right, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
+=shift-xsm-left($n)
+  $val: 100% / $columns * $n
+  +xsm(margin-left, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
+=shift-xsm-right($n)
+  $val: 100% / $columns * $n
+  +xsm(margin-right, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
+=shift-xsm-padding($n)
+  $val: 100% / $columns * $n
+  +xsm(padding-left, #{calc(#{$val} + #{$offset_xsm_one_side})})
+  +xsm(padding-right, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
+=shift-xsm-padding-left($n)
+  $val: 100% / $columns * $n
+  +xsm(padding-left, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
+=shift-xsm-padding-right($n)
+  $val: 100% / $columns * $n
+  +xsm(padding-right, #{calc(#{$val} + #{$offset_xsm_one_side})})
+
 =shift-xxs($n)
   $val: 100% / $columns * $n
   +xxs(margin-left, #{calc(#{$val} + #{$offset_xxs_one_side})})
@@ -319,6 +352,14 @@ $fields: 15px
 
 =xs-block()
   @media only screen and (max-width: $break_xs)
+    @content
+
+=xsm($name, $value)
+  @media only screen and (max-width: $break_xsm)
+    #{$name}: $value
+
+=xsm-block()
+  @media only screen and (max-width: $break_xsm)
     @content
 
 =xxs($name, $value)
