--- a/dev/pug/modules/foot/foot.pug
+++ b/dev/pug/modules/foot/foot.pug
@@ -13,10 +13,10 @@ mixin foot()
         .foot__item.foot__item--fr
           a.phone(href="tel:+380996514812") 
             +svg('phone')
-            | +380 996-514-812
-          a.phone.foot--mail(href="mailto:vrzoneodessa@gmail.com") 
+            | +38 (099) 651-48-12
+          a.phone.foot--mail(href="mailto:info@vrzone.com.ua") 
             +svg('mail')
-            | vrzoneodessa@gmail.com
+            | info@vrzone.com.ua
               
 
 
