--- a/dev/pug/modules/forms/forms.pug
+++ b/dev/pug/modules/forms/forms.pug
@@ -58,7 +58,7 @@ mixin form_default(formClass,formId)
 mixin vis_form(formClass,formId)
   - formClass = formClass || ''
   - formId = formId || ''
-  form(class='form form-site ' + formClass, id=''+formId, action='#', enctype='multipart/form-data')
+  form(class='form-site form--discount ' + formClass, id=''+formId, action='#', enctype='multipart/form-data')
     // Hidden Required Fields
     input(name='form_subject', value='' + formTitle, type='hidden')
     // END Hidden Required Fields
