--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -638,6 +638,156 @@
 
 
 
+.pricing__content-iframe
+  iframe
+    +xsm-block()
+      height: 930px !important
+
+
+.pricing__block
+  position: relative
+  max-width: 780px
+  display: flex
+  justify-content: space-between
+  width: 100%
+  margin-left: auto
+  margin-right: auto
+  background: #fff
+  background-image: url(../img/general/block_s.jpg)
+  background-repeat: no-repeat
+  background-position: left bottom
+  margin-bottom: 30px
+.pricing__block-l
+  width: 100%
+  padding: 30px
+  +sm-block()
+    padding: 14px
+    padding-bottom: 20px
+    padding-bottom: 20px
+.pricing__block-row
+  display: flex
+  width: 100%
+  // background: red
+  align-items: center
+  justify-content: space-between
+
+
+.pricing__block-row-l
+  text-align: right
+  // background: #000
+  width: 33%
+  font-size: 22px
+  font-weight: 300
+  color: #c2c2c6
+  +sm-block()
+    width: 50%
+    color: #000
+    width: auto
+    font-size: 16px
+    text-align: left
+    // background: #000
+.pricing__block-title
+  font-weight: bold
+  font-size: 36px
+  color: #000
+  +xs-block()
+    font-size: 18px
+    
+
+.pricing__block-min
+  font-size: 26px
+  font-weight: bold
+  color: #2c94ff
+  +xs-block()
+    font-size: 16px
+.pricing__block-price
+  font-size: 55px
+  font-weight: bold
+  color: #000
+  +xs-block()
+    font-size: 30px
+  span
+    font-size: 19px
+
+
+
+
+.pricing__block-r
+  position: relative
+  width: 70px
+  display: flex
+  justify-content: center
+  align-items: center
+  background: $blue
+  color: #fff
+  font-size: 17px
+  letter-spacing: 2px
+  text-transform: uppercase
+  font-weight: 600
+  +xs-block()
+    width: 40px
+    font-size: 14px
+    letter-spacing: 0
+  span
+    display: inline-block
+    // background: #000
+    transform: rotate(-90deg)
+
+
+
+
+
+.pricing__block-row-r
+  width: 30%
+  +sm-block()
+    width: auto
+
+.work-time 
+  // background: red
+  color: #fff
+  margin-top: 60px
+  margin-bottom: 60px
+
+.work-time__title
+  text-align: center
+  span
+    display: inline-block
+    font-size: 32px
+    font-weight: bold
+    padding: 10px
+    background: $yel
+    text-transform: uppercase
+    color: #000
+
+
+
+.work-time__content
+  display: flex
+  justify-content: center
+  flex-wrap: wrap
+
+.work-time__item
+  max-width: 217px
+  width: 100%
+  margin: 0 10px
+  font-size: 24px
+  margin-top: 30px
+  font-weight: 300
+  text-align: center
+  span
+    display: block
+    font-weight: bold
+
+
+
+
+
+.form-site
+  +md-block()
+    margin-left: auto
+    margin-right: auto
+    margin-top: 53px
+
 
 
 /*media style*/
